Changed titles and wording

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Shopping List</title>
+        <title>Simpson Cookbook</title>
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     </head>
     <body>
         <nav>
             <div class="nav-wrapper">
-                <a class="brand-logo center">Simpson Cookbook</a>
+                <a class="brand-logo center">Browse Recipes</a>
             </div>
         </nav>
         <ul></ul>
